# System-Monitor

./: CMakeLists.txt  Makefile  README.md  a.out  gladeTesting.glade  glade_proc.glade  main_file  main_file.c  main_file.h  process_info.c  process_info.h  system_monitor  system_monitor.c
